[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# -------------------------
# PEP 621 metadata (uv + modern tooling)
# -------------------------
[project]
name = "aaanalysis"
version = "1.0.2"
description = "Python framework for interpretable protein prediction"
readme = "README.rst"
requires-python = ">=3.9,<3.13"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Stephan Breimann", email = "stephanbreimann@gmail.de" }]
keywords = ["protein", "prediction", "bioinformatics", "machine learning", "interpretable AI"]

classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: BSD License",
  "Development Status :: 5 - Production/Stable",
]

dependencies = [
  "cycler>=0.12.1",
  "et-xmlfile>=2.0.0",
  "fonttools>=4.55.6",
  "Jinja2>=3.1.6",
  "joblib>=1.4.2",
  "kiwisolver>=1.4.7",
  "logomaker>=0.8.6",
  "matplotlib>=3.5.3,<=3.9.0",
  "numpy>=1.24.4,<=2.1.3",
  "openpyxl>=3.1.5",
  "packaging>=24.2",
  "pandas>=2.2.3",
  "patsy>=1.0.1",
  "Pillow>=11.1.0",
  "pyparsing>=3.2.1",
  "python-dateutil>=2.9.0",
  "pytz>=2024.2",
  "scikit-learn>=1.6.1",
  "scipy>=1.13.1",
  "seaborn>=0.13.2",
  "six>=1.17.0",
  "threadpoolctl>=3.5.0",
]

[project.optional-dependencies]
pro = [
  "biopython>=1.85",
  "shap>=0.46.0",
  "UpSetPlot>=0.9.0",
  "hypothesis>=6.124.7",
  "ipython>=8.18.1",
  "pytest>=8.3.4",
]

[project.urls]
Homepage = "https://aaanalysis.readthedocs.io"
Repository = "https://github.com/breimanntools/aaanalysis"
Documentation = "https://aaanalysis.readthedocs.io"


# -------------------------
# Poetry config (kept for Poetry packaging behavior)
# -------------------------
[tool.poetry]
# Keep this section for Poetry-specific settings like "include".
# Metadata & deps are defined in [project] above.
include = [
  "data/*.xlsx",
  "data/benchmarks/*.tsv",
  "data/benchmarks/*.xlsx",
]

# Optional: if you want Poetry to know the homepage explicitly too
homepage = "https://aaanalysis.readthedocs.io"

# If you still want to support `poetry install --extras "pro"` on older Poetry,
# you can keep this mapping; it won't hurt modern tooling.
[tool.poetry.extras]
pro = ["shap", "biopython", "ipython", "hypothesis", "pytest", "UpSetPlot"]

[tool.poetry.urls]
Repository = "https://github.com/breimanntools/aaanalysis"
Documentation = "https://aaanalysis.readthedocs.io"


# -------------------------
# uv (optional)
# -------------------------
[tool.uv]
managed = true


# -------------------------
# Tooling
# -------------------------
[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = '''
.git,
__pycache__,
build,
dist,
venv
'''
