[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# -------------------------
# PEP 621 metadata (uv + modern tooling)
# -------------------------
[project]
name = "aaanalysis"
version = "1.0.2"
description = "Python framework for interpretable protein prediction"
readme = "README.rst"
requires-python = ">=3.10,<3.14"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Stephan Breimann", email = "stephanbreimann@gmail.de" }]
keywords = ["protein", "prediction", "bioinformatics", "machine learning", "interpretable AI"]

classifiers = [
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Natural Language :: English",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "License :: OSI Approved :: BSD License",
  "Development Status :: 5 - Production/Stable",
]

dependencies = [
  "cycler>=0.12.1",
  "et-xmlfile>=2.0.0",
  "fonttools>=4.56.0",
  "Jinja2>=3.1.6",
  "joblib>=1.4.2",
  "kiwisolver>=1.4.7",
  "logomaker>=0.8.6",
  "matplotlib>=3.5.3",
  "numpy>=1.24.4",
  "openpyxl>=3.1.5",
  "packaging>=24.2",
  "pandas>=2.2.3",
  "patsy>=1.0.1",
  "Pillow>=12.0.0",
  "pyparsing>=3.2.1",
  "python-dateutil>=2.9.0",
  "pytz>=2024.2",
  "scikit-learn>=1.6.1",
  "scipy>=1.13.1",
  "seaborn>=0.13.2",
  "six>=1.17.0",
  "threadpoolctl>=3.5.0",
]

[project.optional-dependencies]
pro = [
  "biopython>=1.87",
  "shap>=0.46.0",
  "UpSetPlot>=0.9.0",
]
docs = [
  "docutils==0.21.2",
  "nbconvert>=7.17.0",
  "nbformat==5.10.4",
  "nbsphinx==0.9.6",
  "numpydoc==1.8.0",
  "sphinx==8.1.3",
  "sphinx-autodoc-typehints==1.15.0",
  "sphinx-copybutton==0.5.2",
  "sphinx_design==0.6.1",
  "sphinx_rtd_theme==3.0.2",
  "sphinxext-opengraph==0.9.1",
  "urllib3>=2.6.3",
  "ipywidgets>=8.0.0",
]
dev = [
  "aaanalysis[pro]",
  "aaanalysis[docs]",
  "black>=26.3.1",
  "hypothesis>=6.124.7",
  "ipykernel==6.29.5",
  "ipython>=8.18.1",
  "pandoc==2.4",
  "poetry>=2.0.1",
  "pytest>=8.3.4",
  "pytest-cov>=5.0.0",
  "pytest-mpl==0.17.0",
]

[project.urls]
Homepage = "https://aaanalysis.readthedocs.io"
Repository = "https://github.com/breimanntools/aaanalysis"
Documentation = "https://aaanalysis.readthedocs.io"


# -------------------------
# Poetry config (kept for Poetry packaging behavior)
# -------------------------
[tool.poetry]
include = [
  "data/*.xlsx",
  "data/benchmarks/*.tsv",
  "data/benchmarks/*.xlsx",
]
homepage = "https://aaanalysis.readthedocs.io"

[tool.poetry.urls]
Repository = "https://github.com/breimanntools/aaanalysis"
Documentation = "https://aaanalysis.readthedocs.io"


# -------------------------
# uv (optional)
# -------------------------
[tool.uv]
managed = true


# -------------------------
# Tooling
# -------------------------
[tool.black]
line-length = 88
exclude = '''
/(
    \.git
  | \.venv
  | \.eggs
  | \.mypy_cache
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
exclude = '''
.git,
__pycache__,
build,
dist,
venv
'''